Same website, but something is better than nothing. weeeeelllllll....

--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Hello world
+
+<!DOCTYPE html>
+
+<html>
+   <head>
+      <title>CSCI Club</title>
+      <link href="dist/css/bootstrap.css" rel="stylesheet">
+      <link href="main.css" rel="stylesheet">
+      <link rel="shortcut icon" href="Montismall.ico" type="image/x-icon"/>
+   </head>
+
+   <body>
+      <div class="jumbotron">
+      <div class="container">
+      <h1>Hello, World!</h1>
+      </div>
+      </div>
+
+   </body>
+</html>
