--- a/wes/links.html
+++ b/wes/links.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <a href="wikipedia.com">bikipemia</a>
+    <a href="http://wikipedia.com/">bikipemia</a>
   </body>
 </html>
 
