updated web page

--- a/wes/index.html
+++ b/wes/index.html
@@ -7,51 +7,212 @@
         </marquee>
       </marquee>
     </h1>
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
-    <img src="banana.gif">
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
+    <a href="links.html">
+      <img src="banana.gif">
+    </a>
   </body>
 </html>
