--- a/wes/links.html
+++ b/wes/links.html
@@ -1,6 +1,12 @@
+<!DOCTYPE html>
 <html>
   <body>
-    <a href="http://wikipedia.com/">bikipemia</a>
+    <h1>
+      some useful links:
+    </h1>
+    <a href="http://wikipedia.com/">bikimepia</a></br>
+    <a href="http://googel.com/">goggle</a></br>
+    <a href="http://wes.xn--q9jyb4c/">wes.みんな</a>
   </body>
 </html>
 
