--- a/wes/links.html
+++ b/wes/links.html
@@ -6,7 +6,7 @@
     </h1>
     <a href="http://wikipedia.com/">bikimepia</a></br>
     <a href="http://googel.com/">goggle</a></br>
-    <a href="http://wes.xn--q9jyb4c/">wes.みんな</a>
+    <a href="http://wes.みんな/">wes.みんな</a>
   </body>
 </html>
 
