updated links again

--- a/wes/links.html
+++ b/wes/links.html
@@ -5,6 +5,7 @@
       some useful links:
     </h1>
     <a href="http://wikipedia.com/">bikimepia</a></br>
+    <a href="http://myspace.com/">faceboock</a></br>
     <a href="http://googel.com/">goggle</a></br>
     <a href="http://wes.みんな/">wes.みんな</a>
   </body>
