--- a/wes/index.html
+++ b/wes/index.html
@@ -7,212 +7,214 @@
         </marquee>
       </marquee>
     </h1>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
-    <a href="links.html">
-      <img src="banana.gif">
-    </a>
+    <div align="center">
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+      <a href="links.html">
+        <img src="banana.gif">
+      </a>
+    </div>
   </body>
 </html>
