cool monti animations check it out

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 
 <html>
@@ -15,6 +14,7 @@
       <h1>Hello, World!</h1>
       </div>
       </div>
+      <img class="monti" src="image/computer.jpg">
 
    </body>
 </html>
