--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <h1>Hello, World!</h1>
       </div>
       </div>
+      <img class="logo" src="image/logo.gif">
       <img class="monti" src="image/computer.jpg">
 
    </body>
