--- a/andrew/index.html
+++ b/andrew/index.html
@@ -1,15 +1,13 @@
-<html> 
-	<head> <h1>Andrew's Page</h1> </head>
-	<br> 
-	<body> 
-	
-	<p>Sub World</p>
-	<div> 
-	Some links 
-	<a href="https://google.com">Google</a>
-
-	</div> 
-	
-	</body>
-
-</html> 
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
+        <script type="text/javascript" src="script.js"></script>
+    </head>
+    <body>
+        <div id="red"></div>
+        <div id="blue"></div>
+        <div id="yellow"></div>
+        <div id="green"></div>
+    </body>
+</html>
