--- a/andrew/index.html
+++ b/andrew/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
+        <link rel="stylesheet" type="text/css" href="main.css"/>
         <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
