--- a/andrew/index.html
+++ b/andrew/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+			<script src="http://code.jquery.com/jquery-latest.min.js"
+			type="text/javascript"></script>
         <link rel="stylesheet" type="text/css" href="main.css"/>
         <script type="text/javascript" src="script.js"></script>
     </head>
