--- a/andrew/index.html
+++ b/andrew/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-			<script src="http://code.jquery.com/jquery-latest.min.js"
-			type="text/javascript"></script>
         <link rel="stylesheet" type="text/css" href="main.css"/>
-        <script type="text/javascript" src="script.js"></script>
+				<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+<script type="text/javascript" src="script.js"></script>
     </head>
     <body>
         <div id="red"></div>
