--- a/andrew/index.html
+++ b/andrew/index.html
@@ -6,9 +6,24 @@
 <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
-        <div id="red"></div>
-        <div id="blue"></div>
-        <div id="yellow"></div>
-        <div id="green"></div>
-    </body>
+			<div class="boxStuff"> <h2>Some Color Boxes</h2>
+
+        <div class="boxes" id="red"></div>
+        <div class="boxes" id="blue"></div>
+        <div class="boxes" id="yellow"></div>
+        <div class="boxes" id="green"></div>
+
+				<br>
+				<br>
+				<div id="buttons"> <h2>Some button</h2>
+					<input type="button" name="button1" id="button1" value="A BUTTON">
+					<div id="output"></div>
+				</div>
+<br><br>
+
+<div id="textBoxes">
+	<input type="text" name="name" value="">
+</div>
+			</div>
+		</body>
 </html>
