--- a/andrew/index.html
+++ b/andrew/index.html
@@ -6,7 +6,7 @@
 <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
-			<div class="boxStuff"> <h2>Some Color Boxes</h2>
+			<div class="boxStuff"> <h2>Click These Boxes to make them disappear!</h2>
 
         <div class="boxes" id="red"></div>
         <div class="boxes" id="blue"></div>
