--- a/jlrickert/index.html
+++ b/jlrickert/index.html
@@ -1,32 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=">
-    <title>Cool Stuff</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="main.css">
-  </head>
-  <body>
-    <div id="board">
-      <table>
-        <tr id="row1">
-          <td id=1 class="square"></td>
-          <td id=2 class="square"></td>
-          <td id=3 class="square"></td>
-        </tr>
-        <tr id="row2">
-          <td id=4 class="square"></td>
-          <td id=5 class="square"></td>
-          <td id=6 class="square"></td>
-        </tr>
-        <tr id="row3">
-          <td id=7 class="square"></td>
-          <td id=8 class="square"></td>
-          <td id=9 class="square"></td>
-        </tr>
-      </table>
-    </div>
-	  <div style="text-align:center;"><button class="invisible" id="newGame">New game!</button></div>
-    <script src="js/main.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="shortcut icon" href="/favicon.ico"><title>React App</title><link href="/static/css/main.9a0fe4f1.css" rel="stylesheet"></head><body><div id="root"></div><script type="text/javascript" src="/static/js/main.b3e7d406.js"></script></body></html>
